--- a/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
+++ b/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
@@ -6,6 +6,8 @@ categories: []
 tags: []
 ---
 
+{% include iso.html %}
+
 <h3>Operating System Base</h3>
 <p>Rocks 6.1.1 (Sand Boa) is based upon CentOS 6.5 with all updates available as of 14 April 2014. The OS roll includes an update to<br />
 Openssl that addresses the <a href="http://heartbleed.com">heartbleed vulnerability</a>. This release supports 64-bit systems only.</p>
@@ -14,7 +16,11 @@ Openssl that addresses the <a href="http://heartbleed.com">heartbleed vulnerabil
 <h3>Building Custom Clusters</h3>
 <p>If you wish to build a custom cluster, you must choose from our a la carte selection, but make sure to download the required Base, Kernel/Boot and all of the OS rolls.</p>
 <h3>MD5 Checksums</h3>
-<p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/md5sums.txt">MD5 checksums</a> for all the rolls you download.</p>
+<p>Please double check the <a href="{{isodir611}}/md5sums.txt">MD5 checksums</a> for all the rolls you download.
+</p>
+
+<h3>Downloads</h3>
+<P>All ISOsm DVDs and MD5 checksums are available for downloads from <a href="{{isodir611}}">here</a>. </p>
 
 <table style="text-align: center;" border="1" width="100%">
 <tbody>
@@ -27,31 +33,16 @@ Openssl that addresses the <a href="http://heartbleed.com">heartbleed vulnerabil
 <td style="text-align: center;" width="50%"><strong>jumbo (DVD)</strong></td>
 </tr>
 <tr>
-<td style="text-align: center;">Kernel/Boot Roll<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/kernel-6.1.1-0.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/kernel-6.1.1-0.x86_64.disk1.iso">http</a></td>
+<td style="text-align: center;">Kernel/Boot Roll<br /></td>
 <td style="text-align: center;" rowspan="5">
-Boot, Base, Area51, HTCondor, Fingerprint,<br/> 
-Ganglia, HPC, Java, Perl, Python, Bio, SGE,<br/> 
-Web Server, KVM, ZFS &amp; OS Rolls<br />
-[ dvd only ]<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/area51+base+bio+fingerprint+ganglia+hpc+htcondor+java+kernel+kvm+os+perl+python+sge+web-server+zfs-linux-6.1.1.x86_64.disk1.iso">ftp</a></td>
+Boot, Base, Area51, HTCondor, Fingerprint,<br/>Ganglia, HPC, Java, Perl, Python, Bio, SGE,<br/> 
+Web Server, KVM, ZFS &amp; OS Rolls<br />[ dvd only ]<br />
+</td>
 </tr>
-<tr>
-<td style="text-align: center;">Base Roll<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/base-6.1.1-2.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/base-6.1.1-2.x86_64.disk1.iso">http</a></td>
-</tr>
-<tr>
-<td style="text-align: center;">OS Roll - disk1<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk1.iso">http</a></td>
-</tr>
-<tr>
-<td style="text-align: center;">OS Roll - disk2<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk2.iso">http</a></td>
-</tr>
-<tr>
-<td style="text-align: center;">OS Roll - disk3<br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk3.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk3.iso">http</a></td>
-</tr>
+<tr> <td style="text-align: center;">Base Roll<br /></td> </tr>
+<tr> <td style="text-align: center;">OS Roll - disk1<br /></td> </tr>
+<tr> <td style="text-align: center;">OS Roll - disk2<br /> </td> </tr>
+<tr> <td style="text-align: center;">OS Roll - disk3<br /> </td> </tr>
 </tbody>
 </table>
 
@@ -60,23 +51,18 @@ Web Server, KVM, ZFS &amp; OS Rolls<br />
 <table width="100%" border="1">
 <tbody>
 <tr>
-<th style="text-align: left;" width="15%">roll name</th>
-<th style="text-align: center;" width="60%">summary</th>
-<th style="text-align: center;" width="25%">x86_64</th>
+<th style="text-align: left;" width="30%">roll name</th>
+<th style="text-align: center;" width="70%">summary x86_64</th>
 </tr>
 
 <tr>
 <td>base<br /> <strong>(required)</strong></td>
 <td>Rocks Base Roll</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/base-6.1.1-2.x86_64.disk1.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/base-6.1.1-2.x86_64.disk1.iso">http</a></td>
 </tr>
 
 <tr>
 <td>kernel<br /> <strong>(required)</strong></td>
 <td>Rocks Bootable Kernel Roll</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/kernel-6.1.1-0.x86_64.disk1.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/kernel-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 
 <tr>
@@ -87,136 +73,98 @@ Web Server, KVM, ZFS &amp; OS Rolls<br />
 <tr>
 <td></td>
 <td>os disk 1 <strong>(required)</strong></td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 
 <tr>
 <td></td>
 <td>os disk 2 <strong>(required)</strong></td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk2.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk2.iso">http</a></td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 3 <strong>(required)</strong></td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk3.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk3.iso">http</a></td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 4 (optional)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk4.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk4.iso">http</a></td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 5 optional</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk5.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk5.iso">http</a></td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 6 (optional)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk6.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk6.iso">http</a></td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 7 (optional)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk7.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk7.iso">http</a></td>
 </tr>
 <tr>
 <td></td>
 <td>os disk 8 (optional)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk8.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk8.iso">http</a></td>
 </tr>
 <tr>
 <td></td>
 <td>os disk 9 (optional)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk9.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/os-6.1.1-0.x86_64.disk9.iso">http</a></td>
 </tr>
 <tr>
 <td>area51</td>
 <td>System security related services and utilities</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/area51-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/area51-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>bio</td>
 <td>Bioinformatics utilities</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/bio-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/bio-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>Fingerprint</td>
 <td>Fingerprint application dependencies</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/fingerprint-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/fingerprint-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>HTCondor</td>
 <td>HTCondor High Throughput Computing (version 8.0.6)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/htcondor-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/htcondor-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>ganglia</td>
 <td>Cluster monitoring system from UCB</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/ganglia-6.1.1-2.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/ganglia-6.1.1-2.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>hpc<br />
 <strong> </strong></td>
 <td>Rocks HPC Roll</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/hpc-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/hpc-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>kvm</td>
 <td>Support for building KVM VMs on cluster nodes</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/kvm-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/kvm-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>perl</td>
 <td>Support for Newer Version of Perl</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/perl-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/perl-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>python<br />
 <strong> </strong></td>
 <td>Python 2.7 and Python 3.x</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/python-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/python-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>sge</td>
 <td>Sun Grid Engine (Open Grid Scheduler)  job queueing system (Version GE2011)</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/sge-6.1.1-0.x86_64.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/sge-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>torque</td>
 <td>Torque+Maui job queueing system (packaged by HPC Group at University of Tromso, Norway)</td>
-<td style="text-align: center;"><a title="Torque Roll for Mamba" href="ftp://ftp.uit.no/pub/linux/rocks/torque-roll/6.0.0">(tromso)</a></td>
 </tr>
 <tr>
 <td>web-server</td>
 <td>Rocks Web Server Roll</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/web-server-6.1.1-0.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/web-server-6.1.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
 <td>zfs-linux</td>
 <td>ZFS On Linux Roll. Build and Manage Multi Terabyte File Systems.</td>
-<td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1.1/linux/zfs-linux-0.6.2-1.x86_64.disk1.iso">ftp</a> 
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1.1/linux/zfs-linux-0.6.2-1.x86_64.disk1.iso">http</a></td>
 </tr>
 </tbody>
 </table>
