--- a/assets/usersguides/roll-documentation/base/6.2/install-frontend.html
+++ b/assets/usersguides/roll-documentation/base/6.2/install-frontend.html
@@ -203,7 +203,8 @@ SRC="images/install/splash.png"></P
 >
 	</P
 ><P
->	When you see the screen above, type:
+>	When you see the screen above, type the second  build command with your
+>	parameters:
 	</P
 ><TABLE
 BORDER="0"
@@ -215,7 +216,7 @@ WIDTH="90%"
 COLOR="#000000"
 ><PRE
 CLASS="SCREEN"
->build</PRE
+>build ip=your-ip netmask=your-netmask...</PRE
 ></FONT
 ></TD
 ></TR
