--- a/assets/usersguides/roll-documentation/base/6.2/install-frontend.html
+++ b/assets/usersguides/roll-documentation/base/6.2/install-frontend.html
@@ -203,9 +203,7 @@ SRC="images/install/splash.png"></P
 >
 	</P
 ><P
->	When you see the screen above, type the second  build command with your
->	parameters:
-	</P
+>When you see the screen above, type the second  build command with your parameters:</P
 ><TABLE
 BORDER="0"
 BGCOLOR="#E0E0E0"
