--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ by this goal to help deliver the computational power of clusters to a wide
 range of scientific users. It is clear that making stable and manageable
 parallel computing platforms available to a wide range of scientists will aid
 immensely in improving the state of the art in parallel tools.
-See <a href="/support/licensing">Rocks Licensing</a>.
+See <a href="/docs/licensing">Rocks Licensing</a>.
 </p>
 
 <p>Rocks is supported by the National Science Foundation under Grants 
