--- a/_docs/licensing.html
+++ b/_docs/licensing.html
@@ -20,8 +20,9 @@ weight: 20
                        Rocks(r)
                 www.rocksclusters.org
                 version 6.2 (SideWinder)
+                version 7.0 (Manzanita)
  
- Copyright (c) 2000 - 2014 The Regents of the University of California.
+ Copyright (c) 2000 - 2017 The Regents of the University of California.
  All rights reserved.
  
  Redistribution and use in source and binary forms, with or without
